--- a/admin/features/changePassMainPage.html
+++ b/admin/features/changePassMainPage.html
@@ -1,61 +1,126 @@
 <!-- Change Password Modal -->
 <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-dialog modal-md modal-dialog-centered">
+        <div class="modal-content shadow">
+            <div class="modal-header bg-danger text-white">
+                <h5 class="modal-title fw-bold" id="changePasswordModalLabel">
+                    <i class="bi bi-shield-lock me-2"></i>Change Password
+                </h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body px-4 py-4">
                 <form id="changePasswordForm">
-                    <div class="mb-3">
-                        <label for="currentPassword" class="form-label">Current Password</label>
-                        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
+                    <div class="mb-4">
+                        <label for="currentPassword" class="form-label fw-semibold">Current Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-key"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="currentPassword" name="currentPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="currentPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="newPassword" class="form-label">New Password</label>
-                        <input type="password" class="form-control" id="newPassword" name="newPassword" required>
+                    <div class="mb-4">
+                        <label for="newPassword" class="form-label fw-semibold">New Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-lock"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="newPassword" name="newPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="newPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm New Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                    <div class="mb-4">
+                        <label for="confirmPassword" class="form-label fw-semibold">Confirm New Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-lock-fill"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="confirmPassword" name="confirmPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="confirmPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="text-danger" id="errorMessage"></div>
-                    <div class="text-success" id="successMessage"></div>
-                    <div id="countdownMessage" class="text-success" style="display: none;"></div> <!-- Countdown message -->
-                    <button type="submit" class="btn btn-primary">Change Password</button>
+                    <div class="text-danger small" id="errorMessage"></div>
+                    <div class="text-success small" id="successMessage"></div>
+                    <div id="countdownMessage" class="text-success small" style="display: none;"></div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Change Profile-->
-<div class="modal fade" id="changeProfilePictureModal" tabindex="-1" aria-labelledby="changeProfilePictureModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="changeProfilePictureModalLabel">Change Profile Picture</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="changeProfilePictureForm" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="profilePicture" class="form-label">Choose a new profile picture</label>
-                        <input type="file" class="form-control" id="profilePicture" name="profile_picture" required>
-                        <small class="form-text text-muted">Allowed formats: JPG, PNG, GIF. Max size: 2MB.</small>
-                    </div>
-                    <div class="text-danger" id="profileErrorMessage"></div>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </form>
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">
+                    <i class="bi bi-x-circle me-2"></i>Cancel
+                </button>
+                <button type="submit" form="changePasswordForm" class="btn btn-danger">
+                    <i class="bi bi-check2-circle me-1"></i>Change Password
+                </button>
             </div>
         </div>
     </div>
 </div>
 
-<script>
+<!-- Change Profile-->
+<div class="modal fade" id="changeProfilePictureModal" tabindex="-1" aria-labelledby="changeProfilePictureModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content shadow">
+            <div class="modal-header bg-danger text-white">
+                <h5 class="modal-title fw-bold" id="changeProfilePictureModalLabel">
+                    <i class="bi bi-person-circle me-2"></i>Change Profile Picture
+                </h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body p-4">
+                <form id="changeProfilePictureForm" enctype="multipart/form-data">
+                    <div class="upload-container mb-4">
+                        <div class="upload-image-container d-flex flex-column align-items-center justify-content-center bg-light rounded-3 position-relative" style="height: 300px; border: 2px dashed #ccc;">
+                            <!-- Preview Container -->
+                            <div class="preview-area w-100 h-100 d-flex align-items-center justify-content-center">
+                                <img id="image-preview" src="#" alt="Preview" class="img-fluid rounded-3" style="display: none; max-height: 100%; object-fit: cover;">
+                                <!-- Upload Interface -->
+                                <div id="upload-interface" class="text-center">
+                                    <i class="bi bi-cloud-arrow-up display-4 text-muted"></i>
+                                    <p class="mt-3 mb-1 text-muted">Drag & Drop your image here</p>
+                                    <p class="small text-muted mb-3">or</p>
+                                    <button type="button" class="btn btn-danger btn-sm" id="file-upload-btn">
+                                        <i class="bi bi-folder me-2"></i>Browse Files
+                                    </button>
+                                </div>
+                            </div>
+                            <!-- Delete Button -->
+                            <button type="button" class="btn btn-danger btn-sm position-absolute top-0 end-0 m-2" id="delete-image" style="display: none;">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                            <input type="file" class="d-none" id="profilePicture" name="profile_picture" accept="image/*">
+                        </div>
+                        <div class="small text-muted mt-2">
+                            <i class="bi bi-info-circle me-1"></i>
+                            Allowed formats: JPG, PNG, GIF. Max size: 2MB.
+                        </div>
+                        <div class="text-danger small mt-2" id="profileErrorMessage"></div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">
+                    <i class="bi bi-x-circle me-1"></i>Cancel
+                </button>
+                <button type="submit" form="changeProfilePictureForm" class="btn btn-danger">
+                    <i class="bi bi-check2-circle me-1"></i>Save Changes
+                </button>
+            </div>
+
+        </div>
+    </div>
+    
+</div>
+
+
+<script>        
+
     document.getElementById('changePasswordForm').addEventListener('submit', function (event) {
         event.preventDefault();
     
