--- a/user/features/changePassMainPage.html
+++ b/user/features/changePassMainPage.html
@@ -1,61 +1,85 @@
 <!-- Change Password Modal -->
 <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-md">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <div class="modal-dialog modal-md modal-dialog-centered">
+        <div class="modal-content shadow">
+            <div class="modal-header bg-danger text-white">
+                <h5 class="modal-title fw-bold" id="changePasswordModalLabel">
+                    <i class="bi bi-shield-lock me-2"></i>Change Password
+                </h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body px-4 py-4">
                 <form id="changePasswordForm">
-                    <div class="mb-3">
-                        <label for="currentPassword" class="form-label">Current Password</label>
-                        <input type="password" class="form-control" id="currentPassword" name="currentPassword" required>
+                    <div class="mb-4">
+                        <label for="currentPassword" class="form-label fw-semibold">Current Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-key"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="currentPassword" name="currentPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="currentPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="newPassword" class="form-label">New Password</label>
-                        <input type="password" class="form-control" id="newPassword" name="newPassword" required>
+                    <div class="mb-4">
+                        <label for="newPassword" class="form-label fw-semibold">New Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-lock"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="newPassword" name="newPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="newPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm New Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required>
+                    <div class="mb-4">
+                        <label for="confirmPassword" class="form-label fw-semibold">Confirm New Password</label>
+                        <div class="input-group">
+                            <span class="input-group-text bg-light">
+                                <i class="bi bi-lock-fill"></i>
+                            </span>
+                            <input type="password" class="form-control border-start-0" id="confirmPassword" name="confirmPassword" required>
+                            <span class="input-group-text bg-light toggle-password" style="cursor: pointer;" data-target="confirmPassword">
+                                <i class="bi bi-eye-slash"></i>
+                            </span>
+                        </div>
                     </div>
-                    <div class="text-danger" id="errorMessage"></div>
-                    <div class="text-success" id="successMessage"></div>
-                    <div id="countdownMessage" class="text-success" style="display: none;"></div> <!-- Countdown message -->
-                    <button type="submit" class="btn btn-primary">Change Password</button>
+                    <div class="text-danger small" id="errorMessage"></div>
+                    <div class="text-success small" id="successMessage"></div>
+                    <div id="countdownMessage" class="text-success small" style="display: none;"></div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Change Profile-->
-<div class="modal fade" id="changeProfilePictureModal" tabindex="-1" aria-labelledby="changeProfilePictureModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="changeProfilePictureModalLabel">Change Profile Picture</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="changeProfilePictureForm" enctype="multipart/form-data">
-                    <div class="mb-3">
-                        <label for="profilePicture" class="form-label">Choose a new profile picture</label>
-                        <input type="file" class="form-control" id="profilePicture" name="profile_picture" required>
-                        <small class="form-text text-muted">Allowed formats: JPG, PNG, GIF. Max size: 2MB.</small>
-                    </div>
-                    <div class="text-danger" id="profileErrorMessage"></div>
-                    <button type="submit" class="btn btn-primary">Upload</button>
-                </form>
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">
+                    <i class="bi bi-x-circle me-2"></i>Cancel
+                </button>
+                <button type="submit" form="changePasswordForm" class="btn btn-danger">
+                    <i class="bi bi-check2-circle me-1"></i>Change Password
+                </button>
             </div>
         </div>
     </div>
 </div>
 
 <script>
+
+document.querySelectorAll('.toggle-password').forEach(toggle => {
+        toggle.addEventListener('click', function () {
+            const targetId = this.getAttribute('data-target'); // Get the target input field's ID
+            const targetInput = document.getElementById(targetId);
+
+            if (targetInput.type === 'password') {
+                targetInput.type = 'text'; // Show the password
+                this.innerHTML = '<i class="bi bi-eye"></i>'; // Change icon to "eye"
+            } else {
+                targetInput.type = 'password'; // Hide the password
+                this.innerHTML = '<i class="bi bi-eye-slash"></i>'; // Change icon to "eye-slash"
+            }
+        });
+    });
+
     document.getElementById('changePasswordForm').addEventListener('submit', function (event) {
         event.preventDefault();
     
@@ -134,33 +158,4 @@
             }
         }, 1000);
     }
-
-    //For Changing Profile Pic
-    document.getElementById('changeProfilePictureForm').addEventListener('submit', function (event) {
-        event.preventDefault(); // Prevent the default form submission
-
-        const formData = new FormData(this); // Create a FormData object from the form
-
-        // Send the data to the server using fetch
-        fetch('features/upload_profile_picture.php', {
-            method: 'POST',
-            body: formData
-        })
-        .then(response => response.json())
-        .then(data => {
-            const errorMessage = document.getElementById('profileErrorMessage');
-
-            if (data.success) {
-                // Show success alert and reload the page after confirmation
-                alert("Profile picture changed successfully!");
-                location.reload(); // Reload the page
-            } else {
-                errorMessage.textContent = data.message;
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            document.getElementById('profileErrorMessage').textContent = "An error occurred. Please try again.";
-        });
-    });
 </script>
